Create non-network factories for subresource loads from a service worker

Previously we skipped to create non-network factories for subresource loading
from a service worker as a performance optimization. It works on
S13nServiceWorker because extensions are handled by a resource dispatcher host.
However, NetworkService doesn't work well because those requests need to be
routed to extensions before going to the NetworkService. This CL fixes by always
creating non-network factories for subresource loads.

Bug: 901443
Change-Id: Ia932dc11352c14be9f33c9e3448891cf66d699e0
Reviewed-on: https://chromium-review.googlesource.com/c/1322258
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606099}
Former-commit-id: b8a7f58fe3ca4cc1930f709c24baeafeb82c2170