chrome/test/data/workers/fetch_from_service_worker.js
@@ -3,17 +3,20 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-async function MessageHandler(e) {
-  const port = e.ports[0];
-  const response = await fetch(e.data.url);
-  if (!response.ok) {
-    port.postMessage('bad response');
-    return;
+async function handleMessage(e) {
+  try {
+    const response = await fetch(e.data.url);
+    if (!response.ok) {
+      e.ports[0].postMessage('bad response');
+      return;
+    }
+    const text = await response.text();
+    e.ports[0].postMessage(text);
+  } catch (error) {
+    e.ports[0].postMessage(`${error}`);
   }
-  const text = await response.text();
-  port.postMessage(text);
 }
 
 self.addEventListener('message', e => {
-  e.waitUntil(MessageHandler(e));
+  e.waitUntil(handleMessage(e));
 });
